--- a/resources/sass/pages/login.scss
+++ b/resources/sass/pages/login.scss
@@ -6,7 +6,7 @@
 @import 'variables.scss';
 
 .login-bg{
-	background-image: url("../../images/gallery/flat-bg.jpg");
+	background-image: url("../../images/gallery/time-bg.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
 }
